src/pages/tutorial/tutorial.scss
#slide-1-img-1 {
	width: 70%;
	height: 20%;
    box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-1-img-2 {
	width: 50%;
	height: 70%;
    box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-2-img-1 {
    width: 50%;
    height: 70%;
    box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-2-img-2 {
	width: 50%;
	height: 70%;
}

#slide-3-img-1 {
	width: 50%;
	height: 40%;
	float: left;
    box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-3-img-2 {
	width: 50%;
	height: 40%;
	float: right;
    box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-3-img-3 {
	width: 50%;
	height: 40%;
	margin-top: 1.5em;
    box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-4-img-1 {
	width: 50%;
	height: 60%;
    box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-6-img-1 {
	width: 70%;
	height: 60%;
    box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-8-img-1 {
	width: 50%;
	height: 50%;
    box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-9-img-1 {
	width: 60%;
	
	box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-10-img-1 {
	width: 60%;
	
	box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-11-img-1 {
	width: 40%;
	
	box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-11-img-2 {
	width: 50%;
	
	box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
}

#slide-12-img-1 {
	width: 50%;
	
	box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
    float:right;
}

#slide-12-img-2 {
	width: 50%;
	
	box-shadow: 5px 10px;
    color: lightgray;
    border: lightcyan;
    border-style: solid;
    float: left;
}

